welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:10: error: illegal start of simple pattern
for (case <- 1 to 3) {
     ^Runner:14: error: '<-' expected but '}' found.
	}
        ^